--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "angular-webstorage-service": "^1.0.2",
+    "angularx-social-login": "^1.2.7",
     "bootstrap": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.4.0",
